--- a/starter/app/src/main/res/values/strings.xml
+++ b/starter/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
-
     <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
     <string name="notification_button">See changes</string>
@@ -12,7 +11,7 @@
     <string name="button_loading">We are loading </string>
     <string name="title_activity_detail">DetailActivity</string>
 
-    <string name="glid">Gilde - Image Loading Library by BumpTech</string>
+    <string name="glide">Glide - Image Loading Library by BumpTech</string>
     <string name="retrofit">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
     <string name="loadApp">LoadApp - Current repository by Udacity</string>
 
@@ -21,7 +20,7 @@
     <string name="please_select_file">Please, select a file to download</string>
     <string name="download_complete">Download Completed</string>
     <string name="downloading">Downloading</string>
-    <string name="please_wait">Please wait...</string>
+    <string name="please_wait">Please wait…</string>
     <string name="download_started">Download started</string>
     <string name="download">Download</string>
     <string name="back">Back</string>
